--- a/style/style.css
+++ b/style/style.css
@@ -8,12 +8,11 @@
 /* ----- BODY ---- */
 body {
     background-image: url('/img/nature1.jpg');
-    background-size: cover;  /* Covers the whole screen */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Prevents repetition */
-    background-attachment: fixed; /* So the background doesn’t move */
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
 }
-
 
 
 /* Header */    
@@ -30,14 +29,9 @@ header {
     justify-content: center;
 }
 
-
-main {
-    padding-top: 70px; /* Add space below the fixed header */
-    margin-top: 70px;
-}
-
+/* ------ H Gang ------ */
 h1 {
-    font-family: Audiowide;
+    font-family: Indie Flower;
     text-align: center;
     color: rgb(13, 10, 56);
     padding: 0.7rem;
@@ -47,13 +41,17 @@ h1 {
 } 
 
 h2{
-    font-family: Lavishly Yours;
+    font-family: Special Elite;
     color: rgba(10, 8, 50, 0.87);
-    font-size: 4vw;
+    font-size: 3vw;
+    margin-bottom: 2vw;
 }
 
 h3{
     color: rgba(10, 8, 50, 0.87);
+    font-size: 1.7vw;
+    font-family: Syne Mono;
+    padding-bottom: 1vw;
 }
 
 /* Navigation */
@@ -77,7 +75,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: hsla(100, 89%, 15%, 0.76); /* Changes color */
+    color: hsla(100, 89%, 15%, 0.76); 
 }
 
 nav ul li a::after {
@@ -87,7 +85,7 @@ nav ul li a::after {
     bottom: 0;
     width: 100%;
     height: 2px;
-    background: #a05212; /* Yellow underline */
+    background: #a05212; 
     transform: scaleX(0);
     transition: transform 0.3s ease-in-out;
 }
@@ -101,14 +99,14 @@ nav ul li a:hover::after {
 /* Main content */ 
 main {
     padding: 45px 15px;
-    margin-top: 100px; /* Pulls the section up slightly */
-    border-radius: 20px; /* Soft rounded corners */
-    box-shadow: 0 5px 15px rgb(17, 1, 29); /* Adds a shadow effect */
+    margin-top: 100px; 
+    border-radius: 20px; 
+    box-shadow: 0 5px 15px rgb(17, 1, 29); 
     text-align: center;
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 30px; /* Creates space inside without moving the entire block */
+    padding-top: 30px; 
 }
 
 .highlight {
@@ -129,7 +127,6 @@ footer {
 
 @media (max-width: 768px) {
     body {
- /*       background-color: lightgray; */ /* Not sure how to use yet */
         font-size: 14px;
     }
 }
