--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Orbitron, Arial, Helvetica, sans-serif;
+    font-family: Special Elite, Arial, Helvetica, sans-serif;
     box-sizing: border-box;
     box-shadow: #222;
 }
