--- a/style/style.css
+++ b/style/style.css
@@ -38,7 +38,7 @@ h1 {
     color: rgb(13, 10, 56);
     padding: 0.7rem;
     letter-spacing: 0.1rem;
-    font-size: 2rem;
+    font-size: 2.9vw;
 
 } 
 
@@ -46,7 +46,7 @@ h2{
     font-family: Special Elite;
     color: rgba(10, 8, 50, 0.87);
     font-size: 3vw;
-    margin-bottom: 2vw;
+    margin-bottom: 1.6vw;
 }
 
 h3{
@@ -129,6 +129,6 @@ footer {
 
 @media (max-width: 768px) {
     body {
-        font-size: 14px;
+        font-size: 3vw;
     }
 }
