--- a/style/gallerystyle.css
+++ b/style/gallerystyle.css
@@ -60,7 +60,8 @@ h2 {
     color: rgba(240, 222, 198, 0.781);
     font-size: 3vw;
     text-align: center;
-    padding: 3vw;
+    padding-top: 1vw;
+    padding-bottom: 2vw;
 }
 
 /* Navigation */
