--- a/style/style.css
+++ b/style/style.css
@@ -108,7 +108,7 @@ main {
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 30px; 
+    padding-top: 4vw;
 }
 
 .highlight {
